# filmspot

./: .gitignore  LICENSE  README.md  modal_app.py  print_sentences.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py  service.py
demo/: app.py  sentence_demo.py
demo/web/: index.html
demo/web/assets/: app.js  styles.css
docs/: deep-soaring-hare.md  filmspot_project_report.md
docs/screenshots/: README.md
graph/: __init__.py  builder.py  schema.py  storage.py
ingestion/: __init__.py  audio_transcriber.py  caption_generator.py  embedder.py  frame_extractor.py
retrieval/: __init__.py  fusion.py  graph_traversal.py  pipeline.py  query_decomposer.py  reranker.py  searcher.py
scripts/: ingest_movie.py  query.py
vector_store/: __init__.py  chroma_store.py
